[package]
name = "onnx_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
ndarray = "0.16.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.36"
rocket = "=0.5.0-rc.3"
ort = { version = "2.0.0-rc.9", features = [ "load-dynamic", "cuda" ]}
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
